--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@ body {
    font-family: "Barlow", sans-serif;
    color: rgb(9, 32, 50);
 }
+main {
+   overflow-x: hidden !important;
+}
 ::-webkit-scrollbar {
    width: 10px;
 }
@@ -98,7 +101,7 @@ section {
    font-size: 1.2rem;
    font-weight: 700;
 }
-.home .slide :is(h1,h2) {
+.home .slide :is(h1, h2) {
    font-size: 3rem;
    font-weight: 800;
 }
@@ -256,7 +259,7 @@ footer {
    color: #fff;
 }
 footer::before {
-   content: '';
+   content: "";
    position: absolute;
    inset: 0;
    z-index: -1;
@@ -264,9 +267,9 @@ footer::before {
 }
 /* ------------ End Footer ------------ */
 /* ------------ Start Contact ------------ */
-.contact .image img{
-  object-fit: cover;
-  height: 100%;
+.contact .image img {
+   object-fit: cover;
+   height: 100%;
 }
 .contact .form-control {
    border: unset !important;
@@ -280,7 +283,7 @@ footer::before {
 }
 /* ------------ End Contact ------------ */
 /* Start Media */
-@media (max-width:575.98px) {
+@media (max-width: 575.98px) {
    :root {
       font-size: 13px;
    }
